--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -10,7 +10,7 @@
     </a>
 
 
-    <a href="https://twitter.com/KalpaIISERPune" target="_blank" class="mx-3" aria-label="Twitter" title="Twitter">
+    <a href="https://twitter.com/KalpaIISERPune" target="_blank" class="mx-3" aria-label="Twitter" title="X">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="32"
@@ -18,8 +18,8 @@
             viewBox="0 0 24 24"
             style="fill: currentColor;transform: ;msFilter:;"
             ><path
-                d="M19.633 7.997c.013.175.013.349.013.523 0 5.325-4.053 11.461-11.46 11.461-2.282 0-4.402-.661-6.186-1.809.324.037.636.05.973.05a8.07 8.07 0 0 0 5.001-1.721 4.036 4.036 0 0 1-3.767-2.793c.249.037.499.062.761.062.361 0 .724-.05 1.061-.137a4.027 4.027 0 0 1-3.23-3.953v-.05c.537.299 1.16.486 1.82.511a4.022 4.022 0 0 1-1.796-3.354c0-.748.199-1.434.548-2.032a11.457 11.457 0 0 0 8.306 4.215c-.062-.3-.1-.611-.1-.923a4.026 4.026 0 0 1 4.028-4.028c1.16 0 2.207.486 2.943 1.272a7.957 7.957 0 0 0 2.556-.973 4.02 4.02 0 0 1-1.771 2.22 8.073 8.073 0 0 0 2.319-.624 8.645 8.645 0 0 1-2.019 2.083z"
-            ></path>
+                d = "M13.523985 10.775623L19.480984 4h-1.41143l-5.174801 5.88195L8.764665 4H4l6.246901 8.895341L4 20h1.411431  l5.461361-6.21299L15.235336 20H20L13.523985 10.775623z M11.590199 12.973429l-0.633908-0.886331L5.920428 5.041171h2.168246  l4.065295 5.6884 l0.631236 0.886331 l5.283681 7.39365 H15.90064L11.590199 12.973429z"
+            />       
         </svg>
     </a>
 
