--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -41,7 +41,7 @@ const { sideBarActiveItemID } = Astro.props;
       <a href="/">
         <div class="avatar transition ease-in-out hover:scale-[102%] block m-auto">
           <div class="w-[8.5rem]">
-            <a href="" target="_blank">
+            <a href="/">
             <Image format="png" width={300} height={300} src="/kalpalogo.png" alt="Kalpa logo" />
           </a>
           </div>
