--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,6 +44,8 @@ const last_posts = posts.slice(0, 3);
           url={"/posts/" + createSlug(post.data.title, post.slug)}
           target="_self"
           badge={post.data.badge}
+          pubDate = {post.data.pubDate}
+          authors = {post.data.authors}
         />
         <div class="divider my-0" />
       </>
