--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -35,6 +35,8 @@ const { page } = Astro.props;
               url={"/posts/" + createSlug(post.data.title, post.slug)}
               target="_self"
               badge={post.data.badge}
+              pubDate = {post.data.pubDate}
+              authors = {post.data.authors}
               tags={post.data.tags}
             />
             <div class="divider my-0" />
