--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -13,7 +13,9 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
 
 
 
-    <li><a class="py-3 text-base" id="posts" href="/posts/">Posts</a></li>
+    <li><a class="py-3 text-base" id="opeds" href="/posts/">Op-Eds</a></li>
+    <li><a class="py-3 text-base" id="98 Acres" href="/98 Acres/">98 Acres</a></li>
+    
     <!---<li><a class="py-3 text-base" id="contact" href="/contact">Contact</a></li> -->
     <!-- <li><a class="py-3 text-base" id="cv" href="/cv">CV</a></li> -->
     <li>
