--- a/src/pages/98 Acres/[...page].astro
+++ b/src/pages/98 Acres/[...page].astro
@@ -6,17 +6,17 @@ import createSlug from "../../lib/createSlug"
 
 export async function getStaticPaths({ paginate }) {
   const posts = await getCollection("posts");
-  const opeds = posts.filter(post => post.data.type == "Op-Ed")
-  opeds.sort((a, b) => new Date(b.data.pubDate).valueOf() - new Date(a.data.pubDate).valueOf());
-  return paginate(opeds, { pageSize: 10 });
+  const Acres = posts.filter(post => post.data.type == "98 Acres")
+  Acres.sort((a, b) => new Date(b.data.pubDate).valueOf() - new Date(a.data.pubDate).valueOf());
+  return paginate(Acres, { pageSize: 10 });
 }
 
 const { page } = Astro.props;
 ---
 
-<BaseLayout title="Opinions" sideBarActiveItemID="oped">
+<BaseLayout title="98 Acres" sideBarActiveItemID="posts">
   <div class="mb-5">
-    <div class="flex text-3xl w-full font-bold mb-5 justify-left">Opinion Pieces</div>
+    <div class="flex text-3xl w-full font-bold mb-5 justify-left">98 Acres</div>
   </div>
 
   {
