Dropdown for posts

--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -13,8 +13,15 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
 
 
 
-    <li><a class="py-3 text-base" id="opeds" href="/posts/">Op-Eds</a></li>
-    <li><a class="py-3 text-base" id="98 Acres" href="/98 Acres/">98 Acres</a></li>
+    <li>
+        <details>
+            <summary class="py-3 text-base cursor-pointer">Posts</summary>
+            <ul class="ml-4">
+                <li><a class="py-2 text-base" id="opeds" href="/posts/">Op-Eds</a></li>
+                <li><a class="py-2 text-base" id="98 Acres" href="/98 Acres/">98 Acres</a></li>
+            </ul>
+        </details>
+    </li>
     
     <!---<li><a class="py-3 text-base" id="contact" href="/contact">Contact</a></li> -->
     <!-- <li><a class="py-3 text-base" id="cv" href="/cv">CV</a></li> -->
