--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -6,11 +6,12 @@ import '../styles/global.css';
 export interface Props {
 	title: string;
 	description: string;
+	authors: string;
 	image?: string;
 	ogType?: string;
 }
 
-const { title, description, image = '/spatial_navigation.jpg', ogType = 'website' } = Astro.props;
+const { title, description, authors, image = '/spatial_navigation.jpg', ogType = 'website' } = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -23,6 +24,7 @@ const { title, description, image = '/spatial_navigation.jpg', ogType = 'website
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
+<meta name="authors" content={authors} />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content={ogType} />
