Tried searching, does not work right now, see later

--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -23,6 +23,7 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
         </details>
     </li>
     
+    <li><a class="py-3 text-base" id="SearchBar" href="/search">Search Articles</a></li>
     <!---<li><a class="py-3 text-base" id="contact" href="/contact">Contact</a></li> -->
     <!-- <li><a class="py-3 text-base" id="cv" href="/cv">CV</a></li> -->
     <li>
