--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -14,6 +14,7 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
 
 
     <li><a class="py-3 text-base" id="posts" href="/posts/">Posts</a></li>
+    <li><a class="py-3 text-base" id="cricket" href="/cricket">Cricket</a></li>
     <!---<li><a class="py-3 text-base" id="contact" href="/contact">Contact</a></li> -->
     <!-- <li><a class="py-3 text-base" id="cv" href="/cv">CV</a></li> -->
     <li>
