--- a/src/pages/cricket.astro
+++ b/src/pages/cricket.astro
@@ -1,10 +1,15 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
+import ScoreCard from "@components/ScoreCard.astro";
 ---
 
 <BaseLayout title="Cricket" sideBarActiveItemID="cricket">
   <div class="flex text-3xl w-full font-bold mb-5 justify-left">Cricket</div>
   <div class="flex flex-wrap gap-4 justify-center">
   </div>
+
+  <ScoreCard 
+    link = "/api/cricket.json.ts"
+  />
 </BaseLayout>
