--- a/src/pages/cricket.astro
+++ b/src/pages/cricket.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
 import ScoreCard from "@components/ScoreCard.astro";
+import ScoreCard2 from "@components/ScoreCard2.astro";
 ---
 
 <BaseLayout title="Cricket" sideBarActiveItemID="cricket">
@@ -9,7 +10,29 @@ import ScoreCard from "@components/ScoreCard.astro";
   <div class="flex flex-wrap gap-4 justify-center">
   </div>
 
-  <ScoreCard 
-    link = "/api/cricket.json.ts"
+  <ScoreCard2
+    link = "/public/krcsvs/cricket.csv"
+    format = "<div class='scorecard'>\
+      <span style='color:gray; text-align:left;'>\
+        ${card.DATE}\
+      </span>\
+      <div>\
+        <div style='text-align: left;'>\
+          | ${card.teamA}\
+        </div>\
+        <div style='text-align: right;'>\
+          | ${card.scoreA} (${card.oversA})\
+        </div>\
+      </div>\
+      <div style='text-align: left;'>\
+          | ${card.teamB}\
+      </div>\
+      <div style='text-align: right;'>\
+          | ${card.scoreB} (${card.oversB})\
+      </div>\
+      <hr>\
+      ${card.result} WON BY ${card.winBy}\
+    </div>";
+    
   />
 </BaseLayout>
