--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -5,7 +5,9 @@ const tag_url = url.split("/").slice(0, -1).join("/") + "/tag";
 const refer = title.replace(/^\s+|\s+$/gm,'');
 const authorString = authors.toString().split(",").join(", ");
 const dateTimeFormatter = new Intl.DateTimeFormat("en-US",{dateStyle: 'long'})
+console.log(pubDate);
 const neededDate = dateTimeFormatter.format(new Date(pubDate));
+
 
 ---
 
