--- a/src/pages/kreedajung/cricket.astro
+++ b/src/pages/kreedajung/cricket.astro
@@ -19,6 +19,7 @@ const jsonData = Papa.parse(csvText, {
 {   
     jsonData.map(score => (
     <ScoreCard 
+        type = "cricket"
         matchno = {score.MATCHNO}
         date = {score.DATE}
         teamA = {score.TEAMA}
