--- a/src/pages/kreedajung/football.astro
+++ b/src/pages/kreedajung/football.astro
@@ -19,6 +19,7 @@ const jsonData = Papa.parse(csvText, {
 {   
     jsonData.map(score => (
     <ScoreCard 
+        type = "football"
         matchno = {score.MATCHNO}
         date = {score.DATE}
         teamA = {score.TEAMA}
