--- a/src/pages/kreedajung/khokho.astro
+++ b/src/pages/kreedajung/khokho.astro
@@ -15,12 +15,10 @@ const jsonData = Papa.parse(csvText, {
     <div class="flex text-3xl w-full font-bold mb-5 justify-left">Kho-Kho</div>
     <div class="flex flex-wrap gap-4 justify-center">
     </div>
-<section id = "scoredata">
-
-</section>
 {   
     jsonData.map(score => (
     <ScoreCard 
+        type = "khokho"
         matchno = {score.MATCHNO}
         date = {score.DATE}
         teamA = {score.TEAMA}
