--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -3,7 +3,7 @@ const { sideBarActiveItemID } = Astro.props;
 const activeClass = "bg-base-300"; // For primary color replace with `active` class
 ---
 
-<ul class="menu grow shrink menu-md overflow-y-auto">
+<ul class="flex space-x-6">
     <li><a class="py-3 text-base" id="home" href="/">Home</a></li>
     <li><a class="py-3 text-base" id="about us" href="/aboutus">About us</a></li> 
     <!---<li><a class="py-3 text-base" id="people" href="/people">People</a></li> -->
@@ -13,18 +13,21 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
 
 
 
+    <li><a class="py-3 text-base" id="posts" href="/posts/">Posts</a></li>
     <li>
         <details>
-            <summary class="py-3 text-base cursor-pointer">Posts</summary>
+            <summary class="py-3 text-base cursor-pointer">Kreedajung 2025</summary>
             <ul class="ml-4">
-                <li><a class="py-2 text-base" id="opeds" href="/Opeds/">Op-Eds</a></li>
-                <li><a class="py-2 text-base" id="98 Acres" href="/98 Acres/">98 Acres</a></li>
-                <li><a class="py-2 text-base" id="sports" href="/Sports/">Sports</a></li>
-                <li><a class="py-2 text-base" id="sentience" href="/Sentience/">Sentience</a></li>
+                <li><a class="py-2 text-base" id="basketball" href="/kreedajung/basketball/" >Basketball</a></li>
+                <li><a class="py-2 text-base" id="cricket" href="/kreedajung/cricket/" >Cricket</a></li>
+                <li><a class="py-2 text-base" id="football" href="/kreedajung/football/" >Football</a></li>
+                <li><a class="py-2 text-base" id="frisbee" href="/kreedajung/frisbee/" >Frisbee</a></li>
+                <li><a class="py-2 text-base" id="kabaddi" href="/kreedajung/kabaddi/" >Kabaddi</a></li>
+                <li><a class="py-2 text-base" id="khokho" href="/kreedajung/khokho/" >Kho-Kho</a></li>
+                <li><a class="py-2 text-base" id="volleyball" href="/kreedajung/volleyball/" >Volleyball</a></li>
             </ul>
         </details>
     </li>
-    
     <!---<li><a class="py-3 text-base" id="contact" href="/contact">Contact</a></li> -->
     <!-- <li><a class="py-3 text-base" id="cv" href="/cv">CV</a></li> -->
     <li>
