--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -17,7 +17,7 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
         <details>
             <summary class="py-3 text-base cursor-pointer">Posts</summary>
             <ul class="ml-4">
-                <li><a class="py-2 text-base" id="opeds" href="/Opeds/">Op-Eds</a></li>
+                <li><a class="py-2 text-base" id="opeds" href="/opeds/">Op-Eds</a></li>
                 <li><a class="py-2 text-base" id="98 Acres" href="/98 Acres/">98 Acres</a></li>
                 <li><a class="py-2 text-base" id="sports" href="/Sports/">Sports</a></li>
                 <li><a class="py-2 text-base" id="sentience" href="/Sentience/">Sentience</a></li>
