--- a/src/pages/arts/[...page].astro
+++ b/src/pages/arts/[...page].astro
@@ -16,7 +16,7 @@ const { page } = Astro.props;
 
 <BaseLayout title="posts" sideBarActiveItemID="posts">
   <div class="mb-5">
-    <div class="flex text-3xl w-full font-bold mb-5 justify-left">All Articles</div>
+    <div class="flex text-3xl w-full font-bold mb-5 justify-left">Arts and Culture</div>
   </div>
 
   {
