--- a/src/components/ScoreCard.astro
+++ b/src/components/ScoreCard.astro
@@ -43,15 +43,15 @@ else
 ---
 <head>
     <style>
-        .scorecard {border: 20px; width: 100%; height: 35%; font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji;";}
+        .scorecard {border: 20px; font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji;";}
         .date {color: brown; text-align: right;}
         .teamname{text-align: left;font-size: large; }
         .match {color: black; font-size: medium; display: flex; justify-content: space-between; margin-bottom: 12px; ; }
-        .winclass{ color: black; display: flex; justify-content: space-between;height: 40px; background-color: rgb(182, 215, 186);}
-        .loseclass{color: black; display: flex; justify-content: space-between; height: 40px; background-color: rgb(238, 189, 189);}
+        .winclass{ color: black; display: flex; justify-content: space-between; min-height: 40px ;background-color: rgb(182, 215, 186);}
+        .loseclass{color: black; display: flex; justify-content: space-between;  min-height:40 px; background-color: rgb(238, 189, 189);}
         .score{display: flex;justify-content: end; }
         .extrainfo{}
-        .result{font-weight: bolder; font-size: larger;}
+        .result{font-weight: bolder; font-size: large;}
         hr{height: 4px;border-width: 2px; border-color: rgb(231, 152, 55);}
         bold{color: darkgreen;}
         italic{color: brown;}
@@ -60,7 +60,7 @@ else
 
 <div class="card-actions justify-end"></div>
 
-<div class="card bg-base-100 transition ease-in-out hover:shadow-xl mx-6 my-2 hover:scale-[102%]" style="background-color: rgb(215, 213, 203); width: 100% ; justify-self:center; ">
+<div class="card bg-base-100 transition ease-in-out hover:shadow-xl mx-6 my-2 hover:scale-[102%] md:w-2/5" style="background-color: rgb(215, 213, 203); justify-self:center; ">
     <a href={link} target= {target}>
     <div class="card-body">
         <div class="scorecard">
