--- a/src/pages/kreedajung/frisbee.astro
+++ b/src/pages/kreedajung/frisbee.astro
@@ -15,24 +15,22 @@ const jsonData = Papa.parse(csvText, {
     <div class="flex text-3xl w-full font-bold mb-5 justify-left">Frisbee</div>
     <div class="flex flex-wrap gap-4 justify-center">
     </div>
-
+    <div class="flex flex-wrap justify-center">
 {   
     jsonData.map(score => (
     <ScoreCard 
         type = "frisbee"
         matchno = {score.MATCHNO}
-        date = {score.DATE}
         teamA = {score.TEAMA}
         teamB = {score.TEAMB}
         scoreA = {score.SCOREA}
         scoreB = {score.SCOREB}
-        exA = {score.OVA}
-        exB = {score.OVB}
+        exA = {score.SPIRITA}
+        exB = {score.SPIRITB}
         result = {score.RESULT}
-        winBy = {score.WIN_BY}
-        href = {score.HREF}
     />
 )
 )
 }
+    </div>
 </BaseLayout>
