Fixed mobile layout

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ import Image from "astro/components/Image.astro"
 
   <!-- Center: Title (Remains Centered) -->
   <div class="absolute left-1/2 transform -translate-x-1/2 text-lg md:text-2xl">
-    <span class="relative z-10 block px-5 py-3 overflow-hidden font-medium leading-tight text-gray-800 rounded-md transition-colors duration-300 ease-out border-2 border-gray-900 hover:bg-gray-300">
+    <span class="relative z-10 block px-5 py-3 overflow-hidden font-medium leading-tight text-gray-800 rounded-md transition-colors duration-300 ease-out md:border-2 border-gray-900 hover:bg-gray-300">
       <a href="/">Kalpa IISER Pune</a>
     </span>
   </div>
