--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -16,6 +16,7 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
     <li><a class="py-3 text-base" id="posts" href="/posts/">All Posts</a></li>
     <li><a class="py-3 text-base" id="acres" href="/98 Acres/">98 Acres</a></li>
     <li><a class="py-3 text-base" id="opeds" href="/opeds/">Opinion Pieces</a></li>
+    <li><a class="py-3 text-base" id="magazine" href="/magazine/">Kalpa Editions</a></li>
     <li>
         <details>
             <summary class="py-3 text-base cursor-pointer">Kreedajung 2025</summary>
