--- a/src/pages/joinus.astro
+++ b/src/pages/joinus.astro
@@ -5,32 +5,29 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 <BaseLayout title = "We need you!" sideBarActiveItemID="join us">
   
-    <div class="flex text-3xl w-full font-bold mb-5 justify-left">We need you!🫵🏾</div>
-  <div class="py-2">
+    <div class="flex text-3xl w-full font-bold mb-5 justify-left">We need you!</div>
+    <div class="flex text-lg w-full  mb-4 justify-left">Join us and help us run this thing. You can sign up to volunteer for :</div>
+
 <article class="prose prose-lg max-w-none">
 <ol class="list-decimal">
-  Join us and help us run this thing.
-  
-<ul>  You can sign up to volunteer for: </ul>
+    <ul>    -  <b>Investigative Journalism:</b> You will be talking to a lot of people, gathering information, experiences, and accounts (in any language), and then articulate and consolidate them into articles.</ul>
 
-    <ul>    -  Investigative Journalism: You will be talking to a lot of people, gathering information, experiences, and accounts (in any language), and then articulate and consolidate them into articles.</ul>
+    <ul>    -  <b>Reporting/Interviewing:</b> You will be reporting on the events occurring on campus, such as club events, protests, etc.</ul>
 
-    <ul>    -  Reporting/Interviewing: You will be reporting on the events occurring on campus, such as club events, protests, etc.</ul>
+    <ul>    -  <b>Creative Content Writing (in English and Indian languages):</b> You will be helping in writing and structuring special articles, giving ideas for various sections and helping in refining the ideas of the other teams.</ul>
 
-    <ul>    -  Creative Content Writing (in English and Indian languages): You will be helping in writing and structuring special articles, giving ideas for various sections and helping in refining the ideas of the other teams.</ul>
+    <ul>    -  <b>Language Editing:</b> You would be checking and refining the language of the entire content of the magazine. </ul>
 
-    <ul>    -  Language Editing: You would be checking and refining the language of the entire content of the magazine. </ul>
+    <ul>    -  <b>Videography and Video Editing:</b> You would be required to help shoot and edit videos for Kalpa's YouTube channel and make reels for its Instagram page.</ul>
 
-    <ul>    -  Videography and Video Editing: You would be required to help shoot and edit videos for Kalpa's YouTube channel and make reels for its Instagram page.</ul>
+    <ul>    -  <b>Designs and Illustrations:</b> You will plan the page layouts and illustrate the articles.</ul>
 
-    <ul>    -  Designs and Illustrations: You will plan the page layouts and illustrate the articles.</ul>
+    <ul>    -  <b>Website Management:</b> This department is in charge of handling Kalpa’s website. They will also be responsible for maintaining and updating it when necessary.</ul>
 
-    <ul>    -  Website Management: This department is in charge of handling Kalpa’s website. They will also be responsible for maintaining and updating it when necessary.</ul>
-
-    <ul>    -  Publicity: This domain entails online and offline publicity for Kalpa. Offline publicity consists of putting up posters on campus, and online publicity involves managing Kalpa’s social media accounts.</ul>
+    <ul>    -  <b>Publicity:</b> This domain entails online and offline publicity for Kalpa. Offline publicity consists of putting up posters on campus, and online publicity involves managing Kalpa’s social media accounts.</ul>
 
 
-<ul>Drop us a mail at kalpa@sac.iiserpune.ac.in</ul>
+<ul>Drop us a mail here: <a href="mailto: kalpa@sac.iiserpune.ac.in">kalpa@sac.iiserpune.ac.in</a></ul>
 
 </article>
 
