--- a/src/components/MenuElement.astro
+++ b/src/components/MenuElement.astro
@@ -64,8 +64,8 @@
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="opeds" href="/opeds/">Op-Eds</a>
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="98 Acres" href="/98 Acres/">98 Acres</a>
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="sports" href="/Sports/">Sports and Games</a>
-    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="sentience" href="/Sentience/">Sentience</a>
-    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="sentience" href="/arts/">Arts and Culture</a>
+    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="publications" href="/publications/">Publications</a>
+    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="arts" href="/arts/">Arts and Culture</a>
     <a href="/contact" class="btn btn-ghost hover:text-gray-500 text-base font-normal">Contact</a></li>
 </nav>
 <!-- Right: Social Media & Mobile Menu -->
@@ -78,7 +78,7 @@
 </div>
 
 <!-- Desktop Menu -->
-<div class="menu menu-horizontal px-8 hidden md:flex justify-evenly items-center text-base bg-base-100 p-4 gap-x-6 whitespace-nowrap w-full bg-purple-200">
+<div class="menu menu-horizontal px-8 hidden md:flex justify-evenly items-center text-base bg-base-100 p-4 gap-x-6 w-full bg-purple-200">
   
     <a href="/" class="btn btn-ghost hover:text-gray-500 text-base font-normal">Home</a>
     <a href="/aboutus" class="btn btn-ghost btn btn-ghost hover:text-gray-500 text-base font-normal text-base font-normal">About us</a>
@@ -87,8 +87,8 @@
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="opeds" href="/opeds/">Op-Eds</a>
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="98 Acres" href="/98 Acres/">98 Acres</a>
     <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="sports" href="/Sports/">Sports and Games</a>
-    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="sentience" href="/Sentience/">Sentience</a>
-    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="sentience" href="/arts/">Arts and Culture</a>
+    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="publications" href="/publications/">Publications</a>
+    <a class="btn btn-ghost hover:text-gray-500 text-base font-normal" id="arts" href="/arts/">Arts and Culture</a>
     <a href="/contact" class="btn btn-ghost hover:text-gray-500 text-base font-normal">Contact</a></li>
   
 </div>
