--- a/src/pages/Sports/[...page].astro
+++ b/src/pages/Sports/[...page].astro
@@ -3,7 +3,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import HorizontalCard from "../../components/HorizontalCard.astro";
 import { getCollection } from "astro:content";
 import createSlug from "../../lib/createSlug"
-
+import jsonData from "../../content/kreedajung/kreedajung.json"
 export async function getStaticPaths({ paginate }) {
   const posts = await getCollection("posts");
   const sports = posts.filter(post => post.data.type == "sports")
@@ -23,7 +23,7 @@ const { page } = Astro.props;
     page.data.length === 0 ? (
       <div class="bg-base-200 border-l-4 border-secondary w-full p-4 min-w-full">
         <p class="font-bold">Sorry!</p>
-        <p>There are no posts to show at the moment. Check back later!</p>
+        <p>There are no articles to show at the moment. Check back later!</p>
       </div>
     ) : (
       <ul>
@@ -86,5 +86,20 @@ const { page } = Astro.props;
         <div />
       )
     }
+
+  </div>
+  <div class="mb-5">
+    <div class="flex text-3xl w-full font-bold mb-5 justify-left">Kreedajung 2025</div>
+    {jsonData.map((item) => (
+      <>
+        <HorizontalCard
+          title={item.title}
+          img={item.img}
+          desc={item.desc}
+          url = {item.url}
+        />
+        <div class="divider my-0" />
+      </>
+    ))}
   </div>
 </BaseLayout>
